# hn-reader

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: dependabot-auto-merge.yaml
api/: api.go  api_test.go
models/: models.go  models_test.go
src/: api.rs  main.rs  models.rs  ui.rs
tests/: integration_test.rs
ui/: helpers.go  helpers_test.go  styles.go
