[package]
name = "hn-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29"
opener = "0.8"
serde_json = "1.0"
ratatui = { version = "0.30", features = ["crossterm"] }
